--- a/html/index.html
+++ b/html/index.html
@@ -5,51 +5,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio de Sesion</title>
-  <link rel="stylesheet" href="/css/styleIndex.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
+  <div class="contenedor-principal">
+    <div class="sesion__contenedor">
 
-  <div class="logo__contendor">
-    <img src="/img/logo sena.png" alt="">
-  </div>
+      <div class="logo__contendor">
+        <img src="/img/logo sena.png" alt="Logo SENA" class="logo">
+      </div>
 
-  <div class="sesion__contenedor">
-
-    <div class="sesion__titulo-container">
       <h1 class="sesion__titulo-texto">Inicio de sesion</h1>
-    </div>
-
-
-    <div class="sesion__subtitulo-container">
       <h2 class="sesion__subtitulo-texto">Ingresa a la app parqueadero sena</h2>
-    </div>
 
-    <div class="sesion__documento-container">
-      documento
-      <input type="text" class="sesion__input-documento" placeholder="ingresa tu documento">
-    </div>
+      <label class="campo__etiqueta">Documento</label>
+      <input type="text" class="campo__input" placeholder="ingresa tu documento">
 
-    <div class="sesion__contrasena-container">
-      Contraseña
-      <input type="text" class="sesion__input-documento" placeholder="ingresa   tu contraseña">
-    </div>
+      <label class="campo__etiqueta">Contraseña</label>
+      <input type="password" class="campo__input" placeholder="ingresa tu contraseña">
 
-    <div class="sesion__boton-contenedor">
       <button class="sesion__boton">Iniciar sesion</button>
+
+      <p class="sesion__registro">
+        ¿no tienes cuenta? <a href="/html/registro.html">Registrate</a>
+      </p>
     </div>
 
-    <div class="sesion__opcion--container">
-      ¿no tienes cuenta?
-      <a href="/html/registro.html">Registrate</a>
+    <div class="imagen__contenedor">
+      <img src="/img/estacionamiento1.jpg" alt="Imagen del parqueadero" class="imagen__fondo">
     </div>
-
   </div>
-
-  <div class="imagen__contenedor">
-    <img src="/img/Rectangle 37.png" alt="">
-  </div>
-
 </body>
+
 
 </html>
