--- a/vistauser/html/inicio.html
+++ b/vistauser/html/inicio.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="navbar__usuario">
       <span class="navbar__bienvenida">Bienvenido(a) Jefier Stevan Briceño Vera</span>
-      <a href="logout.html" class="navbar__logout">Cerrar Sesión</a>
+      <a href="/vista/html/Index.html" class="navbar__logout">Cerrar Sesión</a>
     </div>
   </header>
 
@@ -53,6 +53,7 @@
       <a href="/vistauser/html/historial.html" class="inicio__boton">Ver Historial</a>
     </section>
   </main>
+  <script type="module" src="../../app.js"></script>
 </body>
 
 </html>
